--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "avataaars": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^1.1.5"
+    "react-scripts": "^1.1.5",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4"
   },
   "scripts": {
     "start": "craco start",
